--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ name = "firebae-cm"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "A Firebase Cloud Messaging Http V1 implementation"
+license = "MIT"
+homepage = "https://github.com/Vesafary/firebae-cm"
+repository = "https://github.com/Vesafary/firebae-cm"
 
 [dependencies]
 serde =             { version = "1.0.136", features = ["derive"] }
